--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -1,3 +1,61 @@
 <footer class="footer" id="footer">
-    
+    <div class="container">
+        <div class="footer__inner">
+            <div class="footer__logo">
+                <img class="footer__logo-img" src="assets/images/logo.svg" alt="">
+                <ul class="socials">
+                    <li class="socials__item">
+                        <a href="#" target="_blank">
+                            <img src="assets/images/socials/whatsapp.svg" alt="whatsapp">
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#" target="_blank">
+                            <img src="assets/images/socials/telegram.svg" alt="telegram">
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#" target="_blank">
+                            <img src="assets/images/socials/phone.svg" alt="phone">
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#" target="_blank">
+                            <img src="assets/images/socials/vk.svg" alt="vk">
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#" target="_blank">
+                            <img src="assets/images/socials/instagram.svg" alt="instagram">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <nav class="menu  footer__menu">
+                <ul class="menu__list">
+                    <li><a href="#">Наши услуги</a></li>
+                    <li><a href="#">О проекте</a></li>
+                    <li><a href="#">Фотогалерея</a></li>
+                    <li><a href="#">Команда</a></li>
+                    <li><a href="#">Отзывы</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+            <address class="contacts footer__contacts">
+                <a class="contacts__item" href="tel:+79219697771">
+                    <img class="contacts__icon" src="assets/images/icons/phone.svg" alt="">
+                    +7 (921) 969-77-71
+                </a>
+                <a class="btn  footer__btn" href="#">Оставить заявку</a>
+                <div class="contacts__item">
+                    <img class="contacts__icon" src="assets/images/icons/map.svg" alt="">
+                    Санкт-Петербург
+                </div>
+                <a class="contacts__item" href="mailto:sofigorod@yandex.ru">
+                    <img class="contacts__icon" src="assets/images/icons/mail.svg" alt="">
+                    sofigorod@yandex.ru
+                </a>
+            </address>
+        </div>
+    </div>
 </footer>
