--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -2,9 +2,9 @@
     <div class="header__wrapper" id="header">
         <div class="container">
             <div class="header__inner">
-                <div class="header__logo">
+                <a class="header__logo" href="/">
                     <img src="assets/images/logo.svg" alt="">
-                </div>
+                </a>
                 <div class="header__right">
                     <div class="header__top">
                         <div class="header__top-img">
@@ -59,7 +59,7 @@
                     <div class="header__bottom">
                         <nav class="menu">
                             <ul class="menu__list">
-                                <li><a href="#">Наши услуги</a></li>
+                                <li><a href="services.html">Наши услуги</a></li>
                                 <li><a href="#">О проекте</a></li>
                                 <li><a href="#">Фотогалерея</a></li>
                                 <li><a href="#">Команда</a></li>
