--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,10 @@
 <html lang="ru">
 <head>
     @@include('./parts/head.html', {
-        "title": "Мета тэг title"
+        "title": "SG Art project - Экскурсии Арт-встречи"
     })
 </head>
 <body>
-    <!-- Спрайты -->
-
-    @@include('./parts/sprites.html')
 
     <!-- -------------------------------------------- -->
     <div class="wrapper">
@@ -135,7 +132,7 @@
             </section>
 
             <section class="services">
-                <div class="page__section  services__item  item-services">
+                <article class="page__section  services__item  item-services">
                     <div class="container">
                         <h2 class="section-title">Наши услуги</h2>
 
@@ -147,19 +144,19 @@
                                     <p class="item-services__desc">
                                         Индивидуальный маршрут с акцентом на главные достопримечательности Санкт-Петербурга, символы и архитектурные особенности города. Погрузимся в историю города с увлекательным рассказом о жизни, людях, событиях.
                                     </p>
-                                    <a class="btn  item-services__btn" href="#">Программы</a>
+                                    <a class="btn  item-services__btn" href="/services-list.html">Программы</a>
                                 </div>
                             </div>
                             <div class="item-services__bottom">
-                                <div class="item-services__col"><img src="assets/images/services/1 (1).jpg" alt=""></div>
-                                <div class="item-services__col"><img src="assets/images/services/1 (2).jpg" alt=""></div>
-                                <div class="item-services__col"><img src="assets/images/services/1 (3).jpg" alt=""></div>
-                                <div class="item-services__col"><img src="assets/images/services/1 (4).jpg" alt=""></div>
+                                <div class="item-services__col"><img src="assets/images/services/1.jpg" alt=""></div>
+                                <div class="item-services__col"><img src="assets/images/services/2.jpg" alt=""></div>
+                                <div class="item-services__col"><img src="assets/images/services/3.jpg" alt=""></div>
+                                <div class="item-services__col"><img src="assets/images/services/4.jpg" alt=""></div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="page__section  services__item  item-services">
+                </article>
+                <article class="page__section  services__item  item-services">
                     <div class="container">
                         <div class="item-services__inner">
                             <div class="item-services__top">
@@ -169,45 +166,30 @@
                                     <p class="item-services__desc">
                                         Индивидуальный маршрут с акцентом на главные достопримечательности Санкт-Петербурга, символы и архитектурные особенности города. Погрузимся в историю города с увлекательным рассказом о жизни, людях, событиях.
                                     </p>
-                                    <a class="btn  item-services__btn" href="#">Программы</a>
+                                    <a class="btn  item-services__btn" href="/services-list.html">Программы</a>
                                 </div>
                             </div>
                             <div class="item-services__bottom">
-                                <div class="item-services__col"><img src="assets/images/services/1 (1).jpg" alt=""></div>
-                                <div class="item-services__col"><img src="assets/images/services/1 (2).jpg" alt=""></div>
-                                <div class="item-services__col"><img src="assets/images/services/1 (3).jpg" alt=""></div>
-                                <div class="item-services__col"><img src="assets/images/services/1 (4).jpg" alt=""></div>
+                                <div class="item-services__col"><img src="assets/images/services/1.jpg" alt=""></div>
+                                <div class="item-services__col"><img src="assets/images/services/2.jpg" alt=""></div>
+                                <div class="item-services__col"><img src="assets/images/services/3.jpg" alt=""></div>
+                                <div class="item-services__col"><img src="assets/images/services/4.jpg" alt=""></div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </article>
             </section>
 
             <section class="page__section  team">
                 <div class="container">
                     <h2 class="section-title  section-title_white">Гиды и спикеры</h2>
                     <div class="team__inner">
-                        <div class="team__row">
-                            <div class="team__col">
-                                <img class="team__img" src="assets/images/team/1.jpg" alt="">
-                                <div class="team__info">
-                                    <h3 class="team__title">София</h3>
-                                    <div class="team__desc">
-                                        Руководитель проекта, искусствовед, профессиональный гид-переводчик, лектор.
-                                    </div>
+                        <div class="team__col">
+                            <div class="team__item">
+                                <div class="tema__header">
+                                    <a class="team__btn" href="#"></a>
+                                    <img class="team__img" src="assets/images/team/1.jpg" alt="">
                                 </div>
-                            </div>
-                            <div class="team__col">
-                                <img class="team__img" src="assets/images/team/1.jpg" alt="">
-                                <div class="team__info">
-                                    <h3 class="team__title">София</h3>
-                                    <div class="team__desc">
-                                        Руководитель проекта, искусствовед, профессиональный гид-переводчик, лектор.
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="team__col">
-                                <img class="team__img" src="assets/images/team/1.jpg" alt="">
                                 <div class="team__info">
                                     <h3 class="team__title">София</h3>
                                     <div class="team__desc">
@@ -216,9 +198,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="team__row">
-                            <div class="team__col">
-                                <img class="team__img" src="assets/images/team/1.jpg" alt="">
+                        <div class="team__col">
+                            <div class="team__item  special">
+                                <div class="tema__header">
+                                    <a class="team__btn" href="#"></a>
+                                    <img class="team__img" src="assets/images/team/1.jpg" alt="">
+                                </div>
                                 <div class="team__info">
                                     <h3 class="team__title">София</h3>
                                     <div class="team__desc">
@@ -226,8 +211,41 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="team__col">
-                                <img class="team__img" src="assets/images/team/1.jpg" alt="">
+                        </div>
+                        <div class="team__col">
+                            <div class="team__item">
+                                <div class="tema__header">
+                                    <a class="team__btn" href="#"></a>
+                                    <img class="team__img" src="assets/images/team/1.jpg" alt="">
+                                </div>
+                                <div class="team__info">
+                                    <h3 class="team__title">София</h3>
+                                    <div class="team__desc">
+                                        Руководитель проекта, искусствовед, профессиональный гид-переводчик, лектор.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team__col">
+                            <div class="team__item">
+                                <div class="tema__header">
+                                    <a class="team__btn" href="#"></a>
+                                    <img class="team__img" src="assets/images/team/1.jpg" alt="">
+                                </div>
+                                <div class="team__info">
+                                    <h3 class="team__title">София</h3>
+                                    <div class="team__desc">
+                                        Руководитель проекта, искусствовед, профессиональный гид-переводчик, лектор.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team__col">
+                            <div class="team__item  special">
+                                <div class="tema__header">
+                                    <a class="team__btn" href="#"></a>
+                                    <img class="team__img" src="assets/images/team/1.jpg" alt="">
+                                </div>
                                 <div class="team__info">
                                     <h3 class="team__title">София</h3>
                                     <div class="team__desc">
